--- a/css/styles.css
+++ b/css/styles.css
@@ -545,6 +545,12 @@ address {
     width: calc((100% - 48px) / 3);
 }
 
+.portfolio-item:hover {
+    background: #FFFFFF;
+    border: 1px solid #F4F4FD;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
 /* APP CARDS */
 
 .app-card {
