--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
     --first-logo-color: #4D5AE5;
     --logo-color: #2E2F42;
     --filters-button: #e7e9fc;
+    --icon-color: #8E8F99;
 }
 
 /* BODY */
@@ -88,9 +89,6 @@ address {
     outline-offset: -2px; */
 }
 
-.header-container,
-.main-menu,
-.main-button,
 .flex-list {
     display: flex;
 }
@@ -192,7 +190,7 @@ address {
 
 .medium-title {
     font-size: 36px;
-    line-height: 1.11;
+    line-height: 1.1;
     letter-spacing: 0.02em;
 
     margin-bottom: 72px;
@@ -278,20 +276,17 @@ address {
     border-radius: 0px 0px 4px 4px;
     width: 264px;
     padding: 0px;
-
-    display: inline-block;
 }
 
-.features-list-icon {
-    width: 264px;
-    height: 112px;
-    padding: 24px 100px;
-    margin-bottom: 8px;
-
+.features-wrapper {
     justify-content: center;
+    align-items: center;
+
+    height: 112px;
+    margin-bottom: 8px;
+    border-radius: 4px;
 
     background-color: #F4F4FD;
-    border-radius: 4px;
 }
 
 .features-icon {
@@ -347,11 +342,8 @@ address {
 }
 
 .team-card {
-    display: block;
     padding-top: 32px;
     padding-bottom: 32px;
-    padding-left: 16px;
-    padding-right: 16px;
 }
 
 .team-title {
@@ -366,54 +358,68 @@ address {
 }
 
 .socials-list-team {
+    align-items: center;
     justify-content: center;
+    gap: 24px;
 }
 
 .socials-item-team {
     width: 40px;
     height: 40px;
-    padding: 12px;
+}
 
-    background-color: #4D5AE5;
+.socials-link-team {
+    justify-content: center;
+    align-items: center;
+
+    width: 100%;
+    height: 100%;
     border-radius: 50%;
+
+    background-color: var(--first-logo-color);
+}
+
+.socials-link-team:hover,
+.socials-link-team:focus {
+    background-color: #404BBF;
 }
 
 /* SECTION CUSTOMERS */
 
-.customers-container {
-    justify-content: space-between;
-    align-content: center;
-}
-
 .customers-list {
-    padding: 0px;
     gap: 24px;
 }
 
 .customers-item {
-    width: 168px;
+    width: calc((100% - 120px) / 6);
     height: 88px;
-    padding: 16px 32px;
-
     background-color: #fff;
-    border: 1px solid #8E8F99;
+}
+
+.customers-link {
+    width: 100%;
+    height: 100%;
     border-radius: 4px;
+
+    justify-content: center;
+    align-items: center;
+
+    border: 1px solid #8E8F99;
+    color: var(--icon-color);
 }
 
 .customers-icon {
-    fill: #8E8F99;
+    fill: currentColor;
 }
 
-.customers-item:hover,
-.customers-item:focus,
-.customers-icon:hover,
-.customers-icon:focus {
-    fill: #404BBF;
-}
-
-.customers-item:hover,
-.customers-item:focus {
+.customers-link:hover,
+.customers-link:focus {
     border: 1px solid #404BBF;
+}
+
+.customers-item:hover .customers-icon,
+.customers-item:focus .customers-icon {
+    fill: #404BBF;
 }
 
 /* FOOTER */
@@ -423,8 +429,14 @@ address {
     padding-bottom: 100px;
 }
 
+.footer-container {
+    align-items: baseline;
+}
+
 .logo-description {
     display: inline-block;
+
+    margin-right: 120px;
     padding-top: 0;
 }
 
@@ -450,13 +462,14 @@ address {
     height: 80px;
 }
 
-.socials-title {
-    font-size: var(--main-font-size);
-    line-height: var(--main-line-height);
+.socials-description {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 
     color: var(--page-color);
 
-    min-width: 96px;
     margin-bottom: 16px;
 }
 
@@ -468,31 +481,26 @@ address {
 .socials-item {
     width: 40px;
     height: 40px;
-    padding: 8px;
-
-    background-color: #4D5AE5;
-    border-radius: 50%;
-}
-
-.socials-item:hover,
-.socials-item:focus,
-.socials-item-team:hover,
-.socials-item-team:focus {
-    background-color: #404BBF;
-}
-
-.socials-item:active {
-    background-color: #31D0AA;
 }
 
 .socials-link {
-    display: flex;
     justify-content: center;
     align-items: center;
+
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+
+    background-color: var(--first-logo-color);
 }
 
-.socials-icon {
-    border-radius: 0px;
+.socials-link:hover,
+.socials-link:focus {
+    background-color: #31D0AA;
+}
+
+.socials-icon,
+.socials-icon-team {
     fill: #F4F4FD;
 }
 
@@ -511,8 +519,6 @@ address {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
-
-    align-items: center;
 
     height: 48px;
     padding: 12px 24px;
@@ -563,12 +569,15 @@ address {
 
 .portfolio-item {
     border-top: none;
-
     width: calc((100% - 48px) / 3);
 }
 
-.portfolio-item:hover,
-.portfolio-item:focus {
+.portfolio-link {
+    display: block;
+}
+
+.portfolio-link:hover,
+.portfolio-link:focus {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
